Add Vercel deployment configuration and fix New Ticket modal

--- a/.env
+++ b/.env
@@ -2,4 +2,8 @@ MONGODB_URI=mongodb://localhost:27017/ecommerce_support
 JWT_SECRET=your_jwt_secret_key_here
 PORT=3000
 MISTRAL_API_URL=https://api.mistral.ai/v1/chat/completions
-MISTRAL_MODEL=mistral-7b-instruct
+MISTRAL_MODEL=mistral-small-latest
+MISTRAL_API_KEY=Igha3VVN2GpJ7f9RsMPRiJf5kZxlit6n
+# Google Gemini API (Recommended - Best free tier)
+# Get your key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=AIzaSyCfgbCJ1uN9FfblNW0m2ue45gv-NBS4BFM
