--- a/vercel.json
+++ b/vercel.json
@@ -26,5 +26,12 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "includeFiles": [
+    "scripts/**",
+    "models/**",
+    "routes/**",
+    "services/**",
+    "config/**"
+  ]
 }
