--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "ecommerce-support-tool",
-  "version": "1.0.0",
-  "description": "GPT-powered customer support tool for e-commerce platform",
+  "version": "5.0.0",
+  "description": "GPT-powered customer support tool with Mock Data Service - No Database Required",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'No build step required'",
-    "seed": "node scripts/seedData.js",
-    "seed-issues": "node scripts/generateIssueTestData.js",
-    "setup": "node scripts/setupProduction.js",
+    "build": "echo 'No build step required - Mock Data Service'",
+    "test": "echo 'Mock data service is always ready'",
     "deploy": "vercel --prod",
-    "deploy:setup": "npm run setup",
-    "vercel-build": "echo 'Vercel build completed - setup will be done via /api/setup endpoint'"
+    "vercel-build": "echo 'Mock Data Service - No database setup needed'"
   },
   "dependencies": {
     "axios": "^1.5.0",
@@ -22,9 +19,6 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
-    "mongoose": "^7.8.7",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.4",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
   },
@@ -36,7 +30,9 @@
     "support",
     "gpt",
     "mistral",
-    "ticketing"
+    "ticketing",
+    "mock-data",
+    "serverless"
   ],
   "author": "Your Name",
   "license": "MIT"
